--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -1,2 +1,51 @@
-<h1>MapsJavascriptApis#index</h1>
-<p>Find me in app/views/maps_javascript_apis/index.html.erb</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>MAPS JAVASCRIPT API</h1>
+    <p>
+      The Maps JavaScript API lets you customize maps with your own content and imagery for display on web pages and mobile devices.
+      The Maps JavaScript API features four basic map types (roadmap, satellite, hybrid, and terrain)
+      which you can modify using layers and styles, controls and events, and various services and libraries.
+    </p>
+  </div>
+
+  <%= form_tag maps_javascript_apis_path, method: :GET, class: "form-horizontal" do %>
+    <div class="form-group">
+      <%= label_tag :lat, "Lat (*)", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= number_field_tag :lat, lat, class: "form-control", required: true, step: 0.01 %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag :lng, "Long (*)", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= number_field_tag :lng, lng, class: "form-control", required: true, step: 0.01 %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag :zoom, "Zoom (*)", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= number_field_tag :zoom, zoom, class: "form-control", required: true %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= submit_tag "Submit", class: "btn btn-primary btn-block" %>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="container-map" id="map"></div>
+</div>
+
+<script>
+  function initMap() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: {lat: gon.lat, lng: gon.lng},
+      zoom: gon.zoom
+    });
+  }
+</script>
+<%= javascript_include_tag @src, async: true, defer: true %>
