--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -42,9 +42,14 @@
 
 <script>
   function initMap() {
+    var lat_lng = {lat: gon.lat, lng: gon.lng}
     var map = new google.maps.Map(document.getElementById('map'), {
-      center: {lat: gon.lat, lng: gon.lng},
+      center: lat_lng,
       zoom: gon.zoom
+    });
+    var marker = new google.maps.Marker({
+      position: lat_lng,
+      map: map
     });
   }
 </script>
