--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -31,6 +31,13 @@
     </div>
 
     <div class="form-group">
+      <%= label_tag :maptype, "Maptype", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= select_tag :maptype, options_for_select(maptypes, maptype), class: "form-control" %>
+      </div>
+    </div>
+
+    <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <%= submit_tag "Submit", class: "btn btn-primary btn-block" %>
       </div>
@@ -45,7 +52,8 @@
     var lat_lng = {lat: gon.lat, lng: gon.lng};
     var map = new google.maps.Map(document.getElementById('map'), {
       center: lat_lng,
-      zoom: gon.zoom
+      zoom: gon.zoom,
+      mapTypeId: gon.maptype
     });
     var marker = new google.maps.Marker({
       position: lat_lng,
