--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -38,6 +38,20 @@
     </div>
 
     <div class="form-group">
+      <%= label_tag :titl, "Titl (*)", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= number_field_tag :titl, titl, class: "form-control", required: true %>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <%= label_tag :heading, "Heading (*)", class: "control-label col-sm-2" %>
+      <div class="col-sm-10">
+        <%= number_field_tag :heading, heading, class: "form-control", required: true %>
+      </div>
+    </div>
+
+    <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <%= submit_tag "Submit", class: "btn btn-primary btn-block" %>
       </div>
@@ -53,7 +67,8 @@
     var map = new google.maps.Map(document.getElementById('map'), {
       center: lat_lng,
       zoom: gon.zoom,
-      mapTypeId: gon.maptype
+      mapTypeId: gon.maptype,
+      titl: gon.titl
     });
     var marker = new google.maps.Marker({
       position: lat_lng,
