--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -91,17 +91,17 @@
       imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
     });
 
-    var heatmapData = [];
-    for (var i = 0; i < gon.locations.length; i++) {
-      var location = gon.locations[i]
-      var latLng = new google.maps.LatLng(location.lat, location.lng);
-      heatmapData.push(latLng);
-    }
-    var heatmap = new google.maps.visualization.HeatmapLayer({
-      data: heatmapData,
-      dissipating: false,
-      map: map
-    });
+    // var heatmapData = [];
+    // for (var i = 0; i < gon.locations.length; i++) {
+    //   var location = gon.locations[i]
+    //   var latLng = new google.maps.LatLng(location.lat, location.lng);
+    //   heatmapData.push(latLng);
+    // }
+    // var heatmap = new google.maps.visualization.HeatmapLayer({
+    //   data: heatmapData,
+    //   dissipating: false,
+    //   map: map
+    // });
   }
 </script>
 <%= javascript_include_tag "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js" %>
