--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -62,9 +62,10 @@
 </div>
 
 <script>
+  var map, infoWindow;
   function initMap() {
     var lat_lng = {lat: gon.lat, lng: gon.lng};
-    var map = new google.maps.Map(document.getElementById('map'), {
+    map = new google.maps.Map(document.getElementById('map'), {
       center: lat_lng,
       zoom: gon.zoom,
       mapTypeId: gon.maptype,
@@ -102,6 +103,37 @@
     //   dissipating: false,
     //   map: map
     // });
+
+    infoWindow = new google.maps.InfoWindow;
+
+    // Browser support HTML5 geolocation
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var pos = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
+        };
+        
+        infoWindow.setPosition(pos);
+        infoWindow.setContent('Location found.');
+        infoWindow.open(map);
+        //map.setCenter(pos);
+      }, function() {
+        handleLocationError(true, infoWindow, map.getCenter());
+      });
+    }
+    // Browser doesn't support HTML5 geolocation.
+    else {
+      handleLocationError(false, infoWindow, map.getCenter());
+    }
+  }
+
+  function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+    infoWindow.setPosition(pos);
+    infoWindow.setContent(browserHasGeolocation ?
+                          'Error: The Geolocation service failed.' :
+                          'Error: Your browser doesn\'t support geolocation.');
+    infoWindow.open(map);
   }
 </script>
 <%= javascript_include_tag "https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js" %>
