--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -64,18 +64,7 @@
 <script>
   var map, infoWindow;
   function initMap() {
-    var lat_lng = {lat: gon.lat, lng: gon.lng};
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: lat_lng,
-      zoom: gon.zoom,
-      mapTypeId: gon.maptype,
-      titl: gon.titl
-    });
-    var marker = new google.maps.Marker({
-      position: lat_lng,
-      map: map,
-      label: "1"
-    });
+    singleMarer();
 
     var labels = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
     var locations = gon.locations;
@@ -126,6 +115,21 @@
     else {
       handleLocationError(false, infoWindow, map.getCenter());
     }
+  }
+
+  function singleMarer() {
+    var lat_lng = {lat: gon.lat, lng: gon.lng};
+    map = new google.maps.Map(document.getElementById('map'), {
+      center: lat_lng,
+      zoom: gon.zoom,
+      mapTypeId: gon.maptype,
+      titl: gon.titl
+    });
+    var marker = new google.maps.Marker({
+      position: lat_lng,
+      map: map,
+      label: "1"
+    });
   }
 
   function handleLocationError(browserHasGeolocation, infoWindow, pos) {
