--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -79,28 +79,7 @@
     //   map: map
     // });
 
-    infoWindow = new google.maps.InfoWindow;
-
-    // Browser support HTML5 geolocation
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(function(position) {
-        var pos = {
-          lat: position.coords.latitude,
-          lng: position.coords.longitude
-        };
-        
-        infoWindow.setPosition(pos);
-        infoWindow.setContent('Location found.');
-        infoWindow.open(map);
-        //map.setCenter(pos);
-      }, function() {
-        handleLocationError(true, infoWindow, map.getCenter());
-      });
-    }
-    // Browser doesn't support HTML5 geolocation.
-    else {
-      handleLocationError(false, infoWindow, map.getCenter());
-    }
+    infoWindow();
   }
 
   function singleMarer() {
@@ -133,6 +112,31 @@
     var markerCluster = new MarkerClusterer(map, markers, {
       imagePath: 'https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/m'
     });
+  }
+
+  function infoWindow() {
+    infoWindow = new google.maps.InfoWindow;
+
+    // Browser support HTML5 geolocation
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var pos = {
+          lat: position.coords.latitude,
+          lng: position.coords.longitude
+        };
+        
+        infoWindow.setPosition(pos);
+        infoWindow.setContent('Location found.');
+        infoWindow.open(map);
+        //map.setCenter(pos);
+      }, function() {
+        handleLocationError(true, infoWindow, map.getCenter());
+      });
+    }
+    // Browser doesn't support HTML5 geolocation.
+    else {
+      handleLocationError(false, infoWindow, map.getCenter());
+    }
   }
 
   function handleLocationError(browserHasGeolocation, infoWindow, pos) {
