add_marrker_icon

--- a/app/views/maps_javascript_apis/index.html.erb
+++ b/app/views/maps_javascript_apis/index.html.erb
@@ -72,6 +72,9 @@
   }
 
   function singleMarer() {
+    var baseUrl = gon.base_url;
+    var iconUrl = baseUrl + '/images/parking.png';
+
     var lat_lng = {lat: gon.lat, lng: gon.lng};
     map = new google.maps.Map(document.getElementById('map'), {
       center: lat_lng,
@@ -82,7 +85,8 @@
     var marker = new google.maps.Marker({
       position: lat_lng,
       map: map,
-      label: "1"
+      label: "1",
+      icon: iconUrl
     });
   }
 
